# Agentic-Open-World-RAG-Compliance-Assistant

./: README.md  app.py  ingest.py  main.py  orchestrator.py  pyproject.toml  requirements.txt
agents/: arxiv_agent.py  context_agent.py  evidence_agent.py  final_agent.py  mitigation_agent.py  planner_agent.py  rag_agent.py  risk_agent.py  validation_agent.py  web_agent.py
data/: gdpr_articles.txt
data/company_policy/: hr_policy.txt  uk_employment_guidelines.txt
llm/: groq_llm.py
tools/: agent_tools.py
vectorstore/: index.faiss  index.pkl
